Fixing padding/margins/alignment issues that had come up.

--- a/src/components/css-base/_variables.scss
+++ b/src/components/css-base/_variables.scss
@@ -38,8 +38,8 @@ $hamburger-width-sm: 4rem;
 $hamburger-height-sm: 2.3rem;
 $hamburger-width-base: 4.8rem;
 $hamburger-height-base: 3rem;
-$navbar-height-sm: $logo-mark-width-height-sm + $navbar-padding-top-lg + $navbar-padding-bottom-lg;
-$navbar-height-base:  $logo-mark-width-height-base + $navbar-padding-top-lg + $navbar-padding-bottom-lg;
+$navbar-height-sm: $logo-mark-width-height-sm + $navbar-padding-top-lg;
+$navbar-height-base:  $logo-mark-width-height-base + $navbar-padding-top-lg;
 
 
 // Font Sizes
