--- a/src/components/ui-Hero/_index.scss
+++ b/src/components/ui-Hero/_index.scss
@@ -14,14 +14,14 @@
   }
 
   .copy-hldr {
-    padding-top: $navbar-height-base / 2;
+    padding-top: $navbar-height-base;
 
     @include breakpoint($break-pt-sm) {
-      padding-top: $navbar-height-base;
+      padding-top: $navbar-height-base + $navbar-padding-bottom-lg;
     }
 
     @include breakpoint($break-pt-md) {
-      padding-top: $navbar-height-base;
+      padding-top: $navbar-height-base + $navbar-padding-bottom-lg;
     }
   }
 }
